<?xml version="1.0" encoding="utf-8"?>

<!-- Kin Yick Cheung S1302770 -->

	<RelativeLayout xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
  		  android:layout_height="match_parent" android:paddingLeft="1dp"
  		  android:paddingRight="1dp"
  		  android:paddingTop="1dp"
  		  android:paddingBottom="1dp" tools:context=".MainActivity" xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/rwButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/curButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/rwBut" />

    <Button
        android:id="@+id/prwButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rwButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/prwBut" />

    <TextView
        android:id="@+id/titleMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:text="@string/titleMain"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/curButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleMain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:text="@string/curBut" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/matricId"
        android:textColor="#CC0033"
        android:textSize="16sp" />
    
</RelativeLayout>

