<?xml version="1.0" encoding="utf-8"?>

<!-- Kin Yick Cheung S1302770 -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/detTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/titleTxt"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/detDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/descTxt"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/detPubDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detDesc"
        android:layout_centerHorizontal="true"
        android:text="@string/pubDateTxt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/butDetail"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detPubDate"
        android:layout_centerHorizontal="true"
        android:text="@string/detailTxt" />

</RelativeLayout>
